Fix render bug where timestamp added whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@
   margin: 0px;
   border: 0px;
 }
+
+.post-date {
+  float: left;
+}
 /*Code copy button CSS*/
 /*From https://www.dannyguo.com/blog/how-to-add-copy-to-clipboard-buttons-to-code-blocks-in-hugo/ */
 .copy-code-button {
